--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "develop": "gatsby develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
